refactor(接口测试): 接口管理模块接口定义接口文档以及文件上传处理